Add arguments and deep link

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.3.11'
+    ext.navigationSageArgs = "1.0.0-alpha07"
+
     repositories {
         google()
         jcenter()
@@ -9,6 +11,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationSageArgs"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
