--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,15 @@
             android:name = ".MainActivity"
             android:label = "@string/app_name"
             android:theme = "@style/AppTheme.NoActionBar">
+            <nav-graph android:value="@navigation/android_navigation" />
+
             <intent-filter>
                 <action android:name = "android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name = "android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
     </application>
 
